--- a/Portfoliosite/css/jquery.bsPhotoGallery.css
+++ b/Portfoliosite/css/jquery.bsPhotoGallery.css
@@ -76,25 +76,26 @@ a.bsp-controls:hover {
   margin-bottom: 0px;
   padding: 0 12px 5px;
 }
-      body {
-        background:#ebebeb;
+body {
+    background:#ebebeb;
       }
-      ul {
-          padding:0 0 0 0;
-          margin:0 0 40px 0;
+ul {
+    padding:0 0 0 0;
+    margin:0 0 40px 0;
       }
-      ul li {
-          list-style:none;
-          margin-bottom:10px;
-      }
-    .text {
-      /*font-family: 'Bree Serif';*/
-      color:#666;
-      font-size:11px;
-      margin-bottom:10px;
-      padding:12px;
-      background:#fff;
-    }
+ul li {
+    list-style:none;
+    margin-bottom:10px;
+    width:300px;
+    text-align:center;
+    border:solid;
+    margin:2em auto;
+    overflow:hidden
+}
+img {
+    margin:0 -100%;
+    vertical-align:middle;
+}
 
 @media screen and (max-width: 380px){
    .col-xxs-12 {
