--- a/Portfoliosite/css/jquery.bsPhotoGallery.css
+++ b/Portfoliosite/css/jquery.bsPhotoGallery.css
@@ -35,7 +35,6 @@
 .imgWrapper {
   overflow: hidden;
   max-height: 240px;
-  horizontal-align: middle;
 }
 
 a.bsp-controls, 
@@ -86,6 +85,9 @@ ul {
 ul li {
     list-style:none;
     margin-bottom:10px;
+}
+ul li img {
+    text-align: center;
 }
 
 @media screen and (max-width: 380px){
