--- a/Portfoliosite/css/styles.css
+++ b/Portfoliosite/css/styles.css
@@ -61,7 +61,10 @@ a:hover {
 
 #art_storage h2 {
 	font-family: "Comic Sans MS", cursive, sans-serif;
-	padding: 0px 0px 50px 0px;
+	padding: 0px 0px 30px 0px;
+}
+.page-header {
+	padding-bottom: 50px;
 }
 
 .thumbnail {
