--- a/Portfoliosite/css/styles.css
+++ b/Portfoliosite/css/styles.css
@@ -65,11 +65,9 @@ a:hover {
 }
 .page-header {
 	padding-bottom: 50px;
+	margin-bottom: 100px;
 }
 
-ul {
-	padding-top: 50px;
-}
 
 .thumbnail {
     margin-right: auto;
