--- a/Portfoliosite/css/jquery.bsPhotoGallery.css
+++ b/Portfoliosite/css/jquery.bsPhotoGallery.css
@@ -77,12 +77,14 @@ a.bsp-controls:hover {
 }
 body {
     background:#ebebeb;
-      }
-ul {
+}
+
+#listbox {
     padding:0 0 0 0;
     margin:0 0 40px 0;
 }
-ul li {
+
+#listitems {
     list-style:none;
     margin-bottom:10px;
 }
