--- a/Portfoliosite/css/jquery.bsPhotoGallery.css
+++ b/Portfoliosite/css/jquery.bsPhotoGallery.css
@@ -79,12 +79,12 @@ body {
     background:#ebebeb;
 }
 
-#listcontainer {
+ul #listcontainer {
     padding:0 0 0 0;
     margin:0 0 40px 0;
 }
 
-#listbox {
+ul li #listbox {
     list-style:none;
     margin-bottom:10px;
 }
