--- a/Portfoliosite/css/jquery.bsPhotoGallery.css
+++ b/Portfoliosite/css/jquery.bsPhotoGallery.css
@@ -79,12 +79,12 @@ body {
     background:#ebebeb;
 }
 
-ul #listcontainer {
+#listcontainer {
     padding:0 0 0 0;
     margin:0 0 40px 0;
 }
 
-ul li #listbox {
+#listbox {
     list-style:none;
     margin-bottom:10px;
 }
