--- a/Portfoliosite/css/styles.css
+++ b/Portfoliosite/css/styles.css
@@ -56,36 +56,26 @@ a:hover {
 
 #art_storage {
 	background-color: rgb(217, 217, 217);
-	padding: 120px 20px 50px 20px;
+	padding: 180px 0px 50px 0px;
 }
 
 #art_storage h2 {
-	font-family: "Comic Sans MS", cursive, sans-serif;
 	padding: 0px 0px 30px 0px;
 }
-.page-header {
-	padding-bottom: 50px;
-	margin-bottom: 100px;
-}
-
 
 .thumbnail {
-    margin-right: auto;
-    margin-left: auto;
-    padding: 0px;
+  padding: 0px;
+  background-color: rgb(217, 217, 217);
+  border: 0px;
+}
+
+#fancybox-title {
+	margin-left: 0px!important;
 }
 
 .thumbnail .caption {
   padding: 9px;
   color: #333;
-}
-.caption {
-	padding-bottom: 20px;
-	text-align: center;
-}
-
-.caption p {
-	font-size: 10px;
 }
 
 .btn {
